--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      type="image/png"
+      sizes="16x16"
+      rel="icon"
+      href="./assets/icons8-film-reel-ios-16-16.png"
+    />
+    <link
+      type="image/png"
+      sizes="32x32"
+      rel="icon"
+      href="./assets/icons8-film-reel-ios-16-32.png"
+    />
+    <link
+      type="image/png"
+      sizes="96x96"
+      rel="icon"
+      href="./assets/icons8-film-reel-ios-16-96.png"
+    />
     <title>MovieNight - Demo</title>
   </head>
   <body>
